<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/d1"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:text="@string/b1"
            android:background="@color/colorAccent"
            android:onClick="button1"/>

        <Button
            android:id="@+id/d2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b2"
            android:background="@android:color/holo_blue_bright"
            android:onClick="button2"/>

        <Button
            android:id="@+id/d3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b3"
            tools:background="@android:color/holo_purple"
            android:onClick="button3"/>

        <Button
            android:id="@+id/d4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b4"
            android:background="@android:color/holo_orange_dark"
            android:onClick="button4"/>

        <Button
            android:id="@+id/d5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b5"
            android:background="@color/colorAccent"
            android:onClick="button5"/>

        <Button
            android:id="@+id/d6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b6"
            android:background="@android:color/holo_green_dark"
            android:onClick="button6"/>

        <Button
            android:id="@+id/d7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b7"
            android:background="@android:color/background_light"
            android:onClick="button7"/>

        <Button
            android:id="@+id/d8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b8"
            android:background="@color/colorAccent"
            android:onClick="button8"/>

        <Button
            android:id="@+id/d9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b9"
            android:background="@android:color/holo_blue_bright"
            android:onClick="button9"/>

        <Button
            android:id="@+id/d10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b10"
            tools:background="@android:color/holo_purple"
            android:onClick="button10"/>

        <Button
            android:id="@+id/d11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b11"
            android:background="@android:color/holo_orange_dark"
            android:onClick="button11"/>

        <Button
            android:id="@+id/d12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b12"
            android:background="@android:color/background_light"
            android:onClick="button12"/>

        <Button
            android:id="@+id/d13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b13"
            android:background="@color/colorAccent"
            android:onClick="button13"/>
    </LinearLayout>
</ScrollView>